# nerf-rs

./: Cargo.toml  LICENSE  build.rs  output.ppm
docs/: index.html
lego_rust/: README.md  tf_reference_samples.json
lego_rust/coarse/: shapes.txt
src/: lib.rs  main.rs  network.rs  vec3.rs  weights.rs
