[package]
name = "nerf-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.8"
once_cell = "1.19"

[target.'cfg(all(target_os = "macos", not(target_arch = "wasm32")))'.dependencies]
accelerate-src = "0.3.2"
cblas-sys = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
